@@ -1,3 +1,8 @@
+2007-03-08  Andrew Haley  <aph@redhat.com>
+
+	* function.c (expand_function_end): Revert previous patch because
+	it breaks one target on mainline.
+
 2007-03-06  Andrew Haley  <aph@redhat.com>
 
 	Backported from mainline
